add auth unit testing

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,3 +7,5 @@ COPY . .
 CMD ["yarn", "dev"]
 # ====== production ===========
 # CMD ["yarn", "start"]
+# ====== testing =========
+# CMD ['yarn', 'test']
