--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "npx jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,7 +18,9 @@
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
+    "jest": "^29.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
