--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,18 @@ services:
     volumes:
       - ./server/:/server/
 
+  frontend:
+    build: ./frontend/
+    ports:
+      - 3000:3000
+    depends_on:
+      - backend
+    container_name: frontend
+    env_file:
+      - ./frontend/.env
+    volumes:
+      - ./frontend/:/frontend/
+
 volumes:
   mongodb_data:
     driver: local
